Fixed error where I was trying to name a class using the wrong JSON attribute

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
                     if (jsonResponse.complete){
                         newLiItem.className = "task-complete";
                     }
-                    newLiItem.className += " priority-" + jsonResponse.priorityLevel;
+                    newLiItem.className += " priority-" + jsonResponse['priority_level'];
                     console.log(newLiItem.className);
                     document.getElementById("list-todos").appendChild(newLiItem);
                     document.getElementById("error").className = "hidden";
