--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             .priority-high {
                 background-color: orange;
             }
-            .priority-med {
+            .priority-medium {
                 background-color: yellow;
             }
             .priority-low {
