Created wrapper classes for lists and clickable links
Clicking a list's name in the list of lists will now show that list.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,10 +42,14 @@
                 background-color: green;
                 color: white;
             }
+            .lists-wrapper, .todos-wrapper {
+                display: inline-block;
+                vertical-align: top;
+            }
         </style>
     </head>
     <body>
-        <div>
+        <div class="lists-wrapper">
             <form id="form-create-list">
                 <div>
                     <label for="name">Name</label>
@@ -59,43 +63,46 @@
                 {% for list in lists %}
                 <li>
                     <input type="checkbox" data-id="{{ list.id }}" class="checkbox-list-complete"/>
-                    {{ list.name }}
+                        <a href="/lists/{{list.id}}">{{ list.name }}</a>
                     <button class="btn-delete-list" data-id="{{ list.id }}">Delete list</button>
                 </li>
                 {% endfor %}
             </ul>
         </div>
-        <form id="form-create-todo">
-            <div>
-                <label for="description">Description</label>
-                <input type="text" name="description" id="input-description">
-            </div>
-            <div>
-                <label for="priority-level">Priority level</label>
-                <select name="priority-level" id="select-priority-level">
-                    <option value="urgent">URGENT</option>
-                    <option value="high">High</option>
-                    <option value="medium">Medium</option>
-                    <option value="low">Low</option>
-                </select>
-            </div>
-            <div>
-                <input type="submit" id="submit" value="Create new Todo" />
-            </div>
-        </form>
-        <div id="error" class="hidden">An error has occurred.</div>
-        <ul id="list-todos">
-            <!--Load the data input from render_template-->
-            {% for todo in todos %}
-            <!--The double curly brackets are Jinja print statements-->
-            <li class="priority-{{ todo.priority_level }}{% if todo.complete %} task-complete{% endif %}">
-                <input type="checkbox" data-id="{{ todo.id }}" class="checkbox-complete" 
-                    {% if todo.complete %} checked {% endif %} />
-                {{ todo.description }}
-                <button class="btn-delete" data-id="{{ todo.id }}">&cross;</button>
-            </li>
-            {% endfor %}
-        </ul>
+        <div class="todos-wrapper">
+            <h4>{{ active_list.name }}</h4>
+            <form id="form-create-todo">
+                <div>
+                    <label for="description">Description</label>
+                    <input type="text" name="description" id="input-description">
+                </div>
+                <div>
+                    <label for="priority-level">Priority level</label>
+                    <select name="priority-level" id="select-priority-level">
+                        <option value="urgent">URGENT</option>
+                        <option value="high">High</option>
+                        <option value="medium">Medium</option>
+                        <option value="low">Low</option>
+                    </select>
+                </div>
+                <div>
+                    <input type="submit" id="submit" value="Create new Todo" />
+                </div>
+            </form>
+            <div id="error" class="hidden">An error has occurred.</div>
+            <ul id="list-todos">
+                <!--Load the data input from render_template-->
+                {% for todo in todos %}
+                <!--The double curly brackets are Jinja print statements-->
+                <li class="priority-{{ todo.priority_level }}{% if todo.complete %} task-complete{% endif %}">
+                    <input type="checkbox" data-id="{{ todo.id }}" class="checkbox-complete" 
+                        {% if todo.complete %} checked {% endif %} />
+                    {{ todo.description }}
+                    <button class="btn-delete" data-id="{{ todo.id }}">&cross;</button>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
         <script>
             addCheckboxes();
             addDeleteButtons();
